@@ -1,15 +1,15 @@
 Package: mclust
-Version: 3.4.10
-Date: 2011-05-29
-Author: Chris Fraley and Adrian Raftery
+Version: 3.4.11
+Date: 2012--01--06
+Author: Chris Fraley and Adrian Raftery 
 Title: Model-Based Clustering / Normal Mixture Modeling
 Description: Model-based clustering and normal mixture modeling
-        including Bayesian regularization
+                including Bayesian regularization 
 Depends: R (>= 2.2.0), stats, utils
 Suggests: mix
 License: file LICENSE
 Maintainer: Chris Fraley <fraley@stat.washington.edu>
 URL: http://www.stat.washington.edu/research/reports/2006/tr504.pdf
-Packaged: 2011-05-29 16:12:50 UTC; fraley
+Packaged: 2012-01-06 19:12:02 UTC; fraley
 Repository: CRAN
-Date/Publication: 2011-05-30 04:33:22
+Date/Publication: 2012-01-07 16:15:30
