@@ -1,4 +1,4 @@
-MCLUST: Copyright 1991-2011 University of Washington.  All rights reserved.
+MCLUST: Copyright 1991-2012 University of Washington.  All rights reserved.
 
 The term MCLUST used here refers to all versions of the software, including
 contributed R language (CRAN) packages named mclust, mclust02, and mclust98, 
