@@ -1,0 +1,83 @@
+984a0e724bde3ba967b4b47a27a6e89f *CHANGELOG
+621564b4f1210d6a1bb1fcd19a16e14b *DESCRIPTION
+ffc4407d0ff29dee0bec790539e9436c *LICENSE
+c125526363eed6b1b3cf8c032ef84c9f *NAMESPACE
+1d765e8000c59d580e158545eec08460 *R/mclust.R
+75b10919366c91d5b29bb396c446869d *R/zzz.R
+084e100dda6df42390b4db1154c1f577 *data/chevron.rda
+cab74b07bbff6f6dba6913925b744ccb *data/cross.rda
+68ba39558a9004a47893ee7a55c09dac *data/diabetes.rda
+20f449203bfcd2c4ed03a40c5347958f *data/wreath.rda
+0abd3032f74b13b1d057bb4e30464588 *inst/CITATION
+3d0eab788b6968e136888b6e0fd1f1c8 *inst/cite
+93125be26e515406d2c43f58949a796e *man/Defaults.Mclust.Rd
+0c97101f0365bc509024d4a593907df9 *man/Mclust.Rd
+5fbf9ec4aac37b1ff88c0b4f6ca25960 *man/adjustedRandIndex.Rd
+ba45fb236405ef8d4d0812585d8c9639 *man/bic.Rd
+60ce47eb2e543fc4e73c4b07256021eb *man/bicEMtrain.Rd
+bf4765af476a6010ffddc0dd99b8d59a *man/cdens.Rd
+6aaf0ebc638ec09b0d00051b267375a9 *man/cdensE.Rd
+835009f9175813c80953b3b5422b9d17 *man/chevron.Rd
+dc105f3a660006917a850d8ad0aa3c4e *man/clPairs.Rd
+9b72b4d5e7118a9bba5b1a7dddca7953 *man/classError.Rd
+98dc8feca6aab2c0501234869108a0bd *man/coordProj.Rd
+f8b060076407c960ae0b9c3a1899b92a *man/cross.Rd
+cb9922d070ff80c9cd72e222bcd31ab8 *man/cv1EMtrain.Rd
+6243f0deea9d2f53cc424c62baccdb05 *man/decomp2sigma.Rd
+e8f67f65fea6fdb0316d77009bbf68bd *man/defaultPrior.Rd
+8cbb32514903b49ff951df9d61cd089d *man/dens.Rd
+d17ee060213c8f986a2b138a031900f9 *man/densityMclust.Rd
+5f9bbce108a0d5e2aacdb0f6935f9448 *man/diabetes.Rd
+7a798f7e130d74dbd8efdcd008c92301 *man/em.Rd
+c75c6784760903235848777bff4e2eaf *man/emControl.Rd
+2f9a5d0b39e1100407a71118baf3b045 *man/emE.Rd
+f931767816ddf64782b28d5085d7ef1d *man/estep.Rd
+18db1c837edefdba7462c1419f65c54b *man/estepE.Rd
+0b094d1fbed5be9bcb10eadfea42673c *man/hc.Rd
+5a4a847e2d520edcbd9b40de3660cf33 *man/hcE.Rd
+1728dce2b70d78d7d150865b51e47d9a *man/hclass.Rd
+6517666d6b1d0f631e05a5b4026207a8 *man/hypvol.Rd
+3e8d7c564b39009659d3c5b148755211 *man/imputeData.Rd
+42bd65392c84cfd85e070028ad7ee1e2 *man/imputePairs.Rd
+a0e7d982cd3f82e49ee0554aa21167b2 *man/map.Rd
+d14828c2540a8710153683f0ccababef *man/mapClass.Rd
+cf945a8cf03879e3e3867e9f95892ee9 *man/mclust-internal.Rd
+f21f61ca64a98c117a315b65286d724f *man/mclust1Dplot.Rd
+eb85accb64f6356af2f3b499ff84faf5 *man/mclust2Dplot.Rd
+894d68616a73a66d2830886b936c86e7 *man/mclustBIC.Rd
+bee514ff8d9d794eea509e887681cfc9 *man/mclustDA.Rd
+911ddc6aade7b5c4197e2cc1b81b3143 *man/mclustDAtest.Rd
+29eefe693e4d8ff71af0bf1cde9f2595 *man/mclustDAtrain.Rd
+8f3affcc266fcafb95f566dad24c4694 *man/mclustModel.Rd
+eee15e4a2f378fe94d13549938e061a4 *man/mclustModelNames.Rd
+d5fb5442fcf559e78aa36183a2319d61 *man/mclustOptions.Rd
+a6ae3f20a7a38adef158e91065b37776 *man/mclustVariance.Rd
+e720d453c382a0af71bd2fd957bc4f1d *man/me.Rd
+8bd7b91a9d498ff97e7573fe32f43556 *man/meE.Rd
+8e15bbdc0a5a5c22795fcb5edc1bd068 *man/mstep.Rd
+5367ba1a2101054bcb1179aba32c21a6 *man/mstepE.Rd
+88bf7ad547a0d0019a9f77a6d45a3794 *man/mvn.Rd
+ce2c1409c14945a526e12d03e0a05a9f *man/mvnX.Rd
+20226ed0b8bd5d8f5a6004c75d185e5e *man/nVarParams.Rd
+36355172607046a0c37f10dee1197ed5 *man/partconv.Rd
+cde8fd0e95c3ca5e84846d10a851fd76 *man/partuniq.Rd
+57f96110b38ad05e8fc588356b46454b *man/plot.Mclust.Rd
+3704f9cc91d9ce18b4154c36b658a8d3 *man/plot.densityMclust.Rd
+3bf771cbbc2afa44a1b9569b778d8155 *man/plot.mclustBIC.Rd
+9677ae0dcc73e2ed942ae66ddb0aac75 *man/plot.mclustDA.Rd
+f76e5bd3abfaecf014b36afbbd3e14e5 *man/plot.mclustDAtrain.Rd
+6de8f6ad53066b009353d8c88bc5c996 *man/priorControl.Rd
+8f1a65f5459d45e0df06d055ce49c725 *man/randProj.Rd
+28caacc4bf7d53f478b6edb4b346d59e *man/sigma2decomp.Rd
+55abb1684d16cef65c7f177e70f2e46a *man/sim.Rd
+370ab8e1fe88d5ebff45eda6cae3707b *man/simE.Rd
+c09f27fadcf35fa1092b9e745ae62003 *man/summary.mclustBIC.Rd
+9aef169b8117014506d5c9eb47271d1d *man/summary.mclustDAtest.Rd
+637328e1ae9a911c1e10a7dd3c583701 *man/summary.mclustDAtrain.Rd
+bc7203373f8b436f6e157d822678fa6d *man/summary.mclustModel.Rd
+09859d51bb1258c547b7013029c6ea6a *man/surfacePlot.Rd
+14d57e5179e479ea55fa1c131c027218 *man/uncerPlot.Rd
+b860ef7c167eea0598c3beb6d285fd62 *man/unmap.Rd
+19157681a06e90c3b3067a3022f71886 *man/wreath.Rd
+7ab4aae0ebff42ce151372d97076416b *src/Makevars
+ea4519ca3e01e4e50d62865af717cf55 *src/mclust.f
