@@ -5,4 +5,4 @@ Vol. 97, pages 611-631 (2002).
 C. Fraley and A. E. Raftery, MCLUST Version 3 for R: Normal Mixture
 Modeling and Model-based Clustering, Technical Report No. 504,
 Department of Statistics, University of Washington, September 2006
-(revised in 2009).
+(revised in 2012).
