@@ -1,7 +1,8 @@
+2012/01    added NAMESPACE
 2011/05    removed intrinsic gamma
 2011/05    fixed hypvol function to avoid overflow
            fixed hypvol helpfile value description
-2011/02    removed ununsed variables and tabs from source code
+2011/02    removed unused variables and tabs from source code
            switched to intrinsic gamma in source code
            fixed default warning in estepVEV and mstepVEV
 2010/12    fixed output when G = 1 (it had NA for the missing "z" component)
